--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,34 @@
 .App-link {
   color: #61dafb;
 }
+.btn1{
+  margin-right: 16px;
+  margin-bottom: 16px;
+  float: right;
+  top: 7px;
+}
+.btn2{
+  margin-right: 16px;
+  margin-bottom: 16px;
+  float: right;
+  top: 7px;
+}
+.close{
+  float: right;
+}
+h5{
+  position: relative;
+  top: 30px;
+}
+.h1{
+  top: 15px;
+}
+.btn3{
+  float: right;
+  background: transparent;
+  border: none;
+  
+}
 
 @keyframes App-logo-spin {
   from {
